Returned overflow and fixed height for dropdown

--- a/frontend/src/app/shared/components/dropdown/dropdown.component.sass
+++ b/frontend/src/app/shared/components/dropdown/dropdown.component.sass
@@ -49,6 +49,8 @@
 
 .dropdown-wrp
     position: absolute
+    max-height: 230px
+    overflow-y: auto
     top: 51px
     left: 0px
     border-radius: 4px
